--- a/emberek.html
+++ b/emberek.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/teliemberek.css">
+    <link rel="stylesheet" href="css/sötétemberek.css">
     <title>Emberek</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container">
-        <a class="navbar-brand" href="index.html">10.A</a>
+        <a class="kiemeles" href="index.html">10.A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +23,7 @@
                     <a class="navbar" href="galeria.html">Galéria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="navbar" href="orarend.html">Órarend</a>
+                  <a class="navbar" href="emlektabla.html">Emléktábla</a>
                 </li>
             </ul>
         </div>
@@ -45,28 +45,6 @@
                   <p class="card-text">
                     Név:Ádám Nándor Adrián
                     <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 2 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/BAti.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Balázs Attila
-                    <br>
                     Életkor:16
                     <br>
                   </p>
@@ -77,28 +55,8 @@
               </div>
             </div>
           </div>
+          <!-- 2 -->
           <!-- 3 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/BBoti (1).png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Balázs Botond
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Ha meglövöm felrobban?🧨"</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 4 -->
           <div class="carousel-item">
             <div class="container">
@@ -111,7 +69,7 @@
                   <p class="card-text">
                     Név:Bencs Bence Szabolcs
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -133,7 +91,7 @@
                   <p class="card-text">
                     Név:Bernát Ábel
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -155,7 +113,7 @@
                   <p class="card-text">
                     Név:Farkas Máté
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -177,7 +135,7 @@
                   <p class="card-text">
                     Név:Fejes Máté Csaba
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -199,7 +157,7 @@
                   <p class="card-text">
                     Név:Fodor Levente Gábor
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -221,7 +179,7 @@
                   <p class="card-text">
                     Név:Gyenes Krisztián Csongor
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -232,27 +190,6 @@
             </div>
           </div>
           <!-- 10 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/Andris.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Hegedűs István András
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Azért nem vettél észre, mert nem nézel a lábad alá!"</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 11 -->
           <div class="carousel-item">
             <div class="container">
@@ -265,7 +202,7 @@
                   <p class="card-text">
                     Név:Homolya Nándor
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -287,7 +224,7 @@
                   <p class="card-text">
                     Név:Kéri Attila Márk
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -309,7 +246,7 @@
                   <p class="card-text">
                     Név:Kiss Bálint
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -331,7 +268,7 @@
                   <p class="card-text">
                     Név:Kocsis Roland Milán
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -342,27 +279,6 @@
             </div>
           </div>
           <!-- 15 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/KGellért.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Kónya Gellért
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 16 -->
           <div class="carousel-item">
             <div class="container">
@@ -375,7 +291,7 @@
                   <p class="card-text">
                     Név:Kovács Kristóf
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -397,7 +313,7 @@
                   <p class="card-text">
                     Név:Kurucz Gergő
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -408,27 +324,6 @@
             </div>
           </div>
           <!-- 18 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/MMarci.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Mayer Marcell
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 19 -->
           <div class="carousel-item">
             <div class="container">
@@ -441,7 +336,7 @@
                   <p class="card-text">
                     Név:Nagy Marcell
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -463,7 +358,7 @@
                   <p class="card-text">
                     Név:Nagy Szabolcs
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -485,7 +380,7 @@
                   <p class="card-text">
                     Név:Németh Imre
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -507,7 +402,7 @@
                   <p class="card-text">
                     Név:Oreskó Zétény
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -518,27 +413,6 @@
             </div>
           </div>
           <!-- 23 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/PDominik.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Papp Dominik
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint magadban a gerendát"</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 24 -->
           <div class="carousel-item">
             <div class="container">
@@ -551,7 +425,7 @@
                   <p class="card-text">
                     Név:Prokop János Levente
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -573,7 +447,7 @@
                   <p class="card-text">
                     Név:Soltész Zoltán
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -595,7 +469,7 @@
                   <p class="card-text">
                     Név:Sólyom Hunor János
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -606,27 +480,6 @@
             </div>
           </div>
           <!-- 27 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/SZGábor.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Szabó Gábor Alex
-                    <br>
-                    Életkor:15
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 28 -->
           <div class="carousel-item">
             <div class="container">
@@ -639,7 +492,7 @@
                   <p class="card-text">
                     Név:Szabó Kornél
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -661,7 +514,7 @@
                   <p class="card-text">
                     Név:Szászfai László
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -683,7 +536,7 @@
                   <p class="card-text">
                     Név:Szilágyi Bálint
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -705,7 +558,7 @@
                   <p class="card-text">
                     Név:Szilágyi Zsombor
                     <br>
-                    Életkor:15
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
@@ -718,7 +571,7 @@
           <!-- 32 -->
           <div class="carousel-item">
             <div class="container">
-              <div class="row főni">
+              <div class="row sike">
                 <div class="col-md-6">
                   <img src="img/emberek/Sike.jfif" height="815px" class="d-block w-100" alt="...">
                 </div>
@@ -750,13 +603,13 @@
       <div class="container mt-3">
         <div class="row">
             <div class="col text-center">
-                <a href="regitarsak.html" class="btn gomb feher">Régi Osztálytársaink</a>
+                <a href="regitarsak.html" class="btn gomb feher">Régi Osztálytársak</a>
             </div>
         </div>
     </div>
     <br>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
