--- a/galeria.html
+++ b/galeria.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/teligaleria.css">
+    <link rel="stylesheet" href="css/sötétgaléria.css">
     <title>Galéria</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
-            <a class="navbar-brand" href="index.html">10.A</a>
+            <a class="kiemeles" href="index.html">10.A</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +23,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="orarend.html">Órarend</a>
+                        <a class="navbar" href="emlektabla.html">Emléktábla</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
 
     <div class="container mt-5">
       <div class="row">
-      <div class="col mx-6 p-4 hobbi rounded">
+      <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/marcirugasa.MOV" type="video/mp4">              
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-      <div class="col mx-6 p-4 hobbi rounded">
+      <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/pingpong1.mp4" type="video/mp4">              
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="col mx-6 p-4 hobbi rounded">
+    <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/Zsombor kitörés.mp4" type="video/mp4">              
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div class="col mx-6 p-4 hobbi rounded">
+    <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="col mx-6 p-4 hobbi rounded">
+    <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/Green_fn.mp4" type="video/mp4">              
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <div class="col mx-6 p-4 hobbi rounded">
+    <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/Cigrom+tachanka.mp4" type="video/mp4">              
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-    <div class="col mx-6 p-4 hobbi rounded">
+    <div class="col mx-3 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
                 <source src="img/Galeria/Nehaljmeg.mp4" type="video/mp4">              
@@ -116,7 +116,7 @@
   </div>
   </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
