--- a/regitarsak.html
+++ b/regitarsak.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/teliemberek.css">
+    <link rel="stylesheet" href="css/sötétemberek.css">
     <title>Emberek</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container">
-        <a class="navbar-brand" href="index.html">10.A</a>
+        <a class="kiemeles" href="index.html">10.A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +23,7 @@
                     <a class="navbar" href="galeria.html">Galéria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="navbar" href="orarend.html">Órarend</a>
+                  <a class="navbar" href="emlektabla.html">Emléktábla</a>
                 </li>
             </ul>
         </div>
@@ -38,6 +38,50 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
+                  <img src="img/emberek/BAti.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Balázs Attila
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 2 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/BBoti (1).png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Balázs Botond
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Ha meglövöm felrobban?🧨"</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 3 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
                   <img src="img/emberek/BLevi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
@@ -46,6 +90,116 @@
                     Név:Biró Levente
                     <br>
                     Életkor:15
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 4 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/Andris.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Hegedűs István András
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Azért nem vettél észre, mert nem nézel a lábad alá!"</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 5 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/KGellért.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Kónya Gellért
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 6 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/MMarci.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Mayer Marcell
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+           <!-- 7 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/PDominik.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Papp Dominik
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint magadban a gerendát"</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 8 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/SZGábor.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Szabó Gábor Alex
+                    <br>
+                    Életkor:16
                     <br>
                   </p>
                   <hr>
