--- a/fotok.html
+++ b/fotok.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/telifotok.css">
+    <link rel="stylesheet" href="css/sötétfotók.css">
     <title>Fotók</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
-            <a class="navbar-brand" href="index.html">10.A</a>
+            <a class="kiemeles" href="index.html">10.A</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,7 +24,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="orarend.html">Órarend</a>
+                        <a class="navbar" href="emlektabla.html">Emléktábla</a>
                     </li>
                 </ul>
             </div>
