--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/telindex.css">
+    <link rel="stylesheet" href="css/sötétindex.css">
     <title>Főoldal</title>
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
-            <a class="navbar-brand" href="index.html">10.A</a>
+            <a class="kiemeles" href="index.html">10.A</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,7 +25,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="orarend.html">Órarend</a>
+                        <a class="navbar" href="emlektabla.html">Emléktábla</a>
                     </li>
                 </ul>
             </div>
@@ -38,8 +39,21 @@
         <br>
         <br>
         <div class="row">
+            <div class="col-md-12 col-12 col-lg-12">
+                <a href="img/index/10.a emlékkép.png" class="lightbox">
+                    <img src="img/index/10.a emlékkép.png" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Utolsó Tudósítás</h2>
+                        <p class="card-text">2025. Március 6.-a az utolsó napja ennek az oldalnak. Egy élmény volt ez az osztály és remélem a jövőbe is a maradék tagok jól fogják magukat érezni.</p>
+                        <p class="card-text">Köszönöm azt a másfél évet amelyet itt töltöttem osztálytársaimnak!</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06 - Papp Dániel Dominik, Főszerkesztő</small></p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/fogaszat.jpg" class="lightbox">
+                <a href="img/index/kandobal.jpg" class="lightbox">
                     <img src="img/index/kandobal.jpg" height="285" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
@@ -50,13 +64,13 @@
                         <p class="card-text">Dress code: Öltöny / Alkalmi ruha</p>
                         <p class="card-text">Elérhetőség: <a class="linkek" href="https://ferenczi.kandobal.hu" target="_blank">https://ferenczi.kandobal.hu</a> vagy a 
                             kapcsolat@kandobal.hu email címen</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2025.02.013.</small></p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.02.013</small></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/fogaszat.jpg" class="lightbox">
-                    <img src="img/index/fogaszat.jpg" height="330" class="card-img-top" alt="...">
+                <a href="img/index/october-1.png" class="lightbox">
+                    <img src="img/index/october-1.png" height="330" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -65,7 +79,7 @@
                         <p class="card-text">Október 22. öltöny, mozilátogatás</p>
                         <p class="card-text">Október 23. munkaszüneti nap</p>
                         <p class="card-text">Október 26- november 3. Őszi Szünet</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2024.010.010.</small></p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.010.010</small></p>
                     </div>
                 </div>
             </div>
@@ -86,7 +100,7 @@
                                 <li>A telefonleadás egyszerűsítése érdekében az iskola zárható telefontároló szekrényt szerezne be, ahol mindenkinek saját rekesze lenne (osztályonként zárható) Ennek költsége 1300 Ft/fő. Javaslom, hogy ezt ne külön hozzuk be, hanem az osztálypénzből fedezzük.</li>
                             </ul>
                         </div>
-                        <button onclick="toggleText()">Többi</button>
+                        <button onclick="toggleText(this)">Többi</button>
                         <p class="card-text"><small class="datum">Publikálva: 2024.09.18.</small></p>
                     </div>
                 </div>
@@ -139,7 +153,7 @@
                                 Amennyiben esne az eső, a szervezők zárt helyen elvégzendő feladatot, munkát adnak az önkénteseknek, tehát rossz idő estén is érdemes jelentkezni!</p>
                             <p class="card-text">Éljetek ezzel a lehetőséggel. jelentkezzetek a programra!</p>
                         </div>
-                        <button onclick="toggleText()">Többi</button>
+                        <button onclick="toggleText(this)">Többi</button>
                         <p class="card-text"><small class="datum">Publikálva: 2024.05.22.</small></p>
                     </div>
                 </div>
@@ -213,20 +227,21 @@
     </div>
     
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.js"></script>
     <script>
         baguetteBox.run('.lightbox');
-
-        function toggleText() {
-            var fullText = document.getElementById("fullText");
-            if (fullText.style.display === "none") {
+        function toggleText(button) {
+            var fullText = button.previousElementSibling;
+            if (fullText.style.display === "none" || fullText.style.display === "") {
                 fullText.style.display = "block";
+                button.textContent = "Kevesebb";
             } else {
                 fullText.style.display = "none";
-            }
+                button.textContent = "Többi";
+                    }
         }
     </script>
 </body>
