--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h2 class="card-title">Utolsó Tudósítás</h2>
                         <p class="card-text">2025. Március 6.-a az utolsó napja ennek az oldalnak. Egy élmény volt ez az osztály és remélem a jövőbe is a maradék tagok jól fogják magukat érezni.</p>
                         <p class="card-text">Köszönöm azt a másfél évet amelyet itt töltöttem osztálytársaimnak!</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06 - Papp Dániel Dominik, Főszerkesztő</small></p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06. - Papp Dániel Dominik, Főszerkesztő</small></p>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <p class="card-text">Dress code: Öltöny / Alkalmi ruha</p>
                         <p class="card-text">Elérhetőség: <a class="linkek" href="https://ferenczi.kandobal.hu" target="_blank">https://ferenczi.kandobal.hu</a> vagy a 
                             kapcsolat@kandobal.hu email címen</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2025.02.013</small></p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.02.13.</small></p>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                         <p class="card-text">Október 22. öltöny, mozilátogatás</p>
                         <p class="card-text">Október 23. munkaszüneti nap</p>
                         <p class="card-text">Október 26- november 3. Őszi Szünet</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2024.010.010</small></p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.10.10.</small></p>
                     </div>
                 </div>
             </div>
