--- a/emberek.html
+++ b/emberek.html
@@ -56,6 +56,27 @@
             </div>
           </div>
           <!-- 2 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/BAti.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Balázs Attila
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- 3 -->
           <!-- 4 -->
           <div class="carousel-item">
@@ -279,6 +300,27 @@
             </div>
           </div>
           <!-- 15 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/KGellért.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Kónya Gellért
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- 16 -->
           <div class="carousel-item">
             <div class="container">
@@ -413,6 +455,27 @@
             </div>
           </div>
           <!-- 23 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/PDominik.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Papp Dominik
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint magadban a gerendát"</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- 24 -->
           <div class="carousel-item">
             <div class="container">
