--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-12">
-                <a href="img/index/10.a emlékkép.png" class="lightbox">
-                    <img src="img/index/10.a emlékkép.png" class="card-img-top" alt="...">
+                <a href="img/index/emlekkep.png" data-caption="Emlékkép a távozókról" class="lightbox">
+                    <img src="img/index/emlekkep.png" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h2 class="card-title">Utolsó Tudósítás</h2>
-                        <p class="card-text">2025. Március 6.-a az utolsó napja ennek az oldalnak. Egy élmény volt ez az osztály és remélem a jövőbe is a maradék tagok jól fogják magukat érezni.</p>
-                        <p class="card-text">Köszönöm azt a másfél évet amelyet itt töltöttem osztálytársaimnak!</p>
-                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06. - Papp Dániel Dominik, Főszerkesztő</small></p>
+                        <h2 class="card-title">Március 6.</h2>
+                        <p class="card-text">2025. Március 6.-a megemlékezés az osztályból eltávozó 4 ember részére.</p>
+                        <p class="card-text">Névszerint: Szabó Gábor Alex,Hegedűs István András, Balázs Botond és Mayer Marcell.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06.</small></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/kandobal.jpg" class="lightbox">
-                    <img src="img/index/kandobal.jpg" height="285" class="card-img-top" alt="...">
+                <a href="img/index/kandobal.jpg" data-caption="Ferenczi-Kandó Bál plakát" class="lightbox">
+                    <img src="img/index/kandobal.jpg" height="285" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/october-1.png" class="lightbox">
-                    <img src="img/index/october-1.png" height="330" class="card-img-top" alt="...">
+                    <img src="img/index/october-1.png" height="330" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/infó.jpg" class="lightbox">
-                    <img src="img/index/infó.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/infó.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/deszkatemplom.jpg"  data-caption="A miskolci református deszkatemplom" class="lightbox">
-                    <img src="img/index/deszkatemplom.jpg" height="277" class="card-img-top" alt="...">
+                    <img src="img/index/deszkatemplom.jpg" height="277" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -160,7 +160,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/erettsegi.jpg"  data-caption="Érettségi Kép" class="lightbox">
-                    <img src="img/index/erettsegi.jpg" height="332" class="card-img-top" alt="...">
+                    <img src="img/index/erettsegi.jpg" height="332" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -175,7 +175,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/biciklizők.jpg" data-caption="A bicikli túra" class="lightbox">
-                    <img src="img/index/biciklizők.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/biciklizők.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -188,7 +188,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/óra.jpg" data-caption="Elkészült az új óra!" class="lightbox">
-                    <img src="img/index/óra.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/óra.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -200,7 +200,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/túra_térkép.jpg" data-caption="Bicikli Túra!" class="lightbox">
-                    <img src="img/index/túra_térkép.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/túra_térkép.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -213,7 +213,7 @@
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lézerharc.jpg" data-caption="Lézerharc!" class="lightbox">
-                    <img src="img/index/lézerharc.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/lézerharc.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
